[project]
name = "pyutils"
version = "0.1.1"
authors = [ 
	{ name="Jylpah", email="jylpah@gmail.com"} 
	]
description = "Misc Python utils and classes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Development Status :: 3 - Alpha",
	"Environment :: Console", 
	"Framework :: Pydantic",
	"Framework :: aiohttp",
	"Topic :: Games/Entertainment"
]
dependencies = [
	"aiofiles>=23.1.0",
	"aiohttp>=3.8.4",
	"aiosqlite>=0.19.0",
	"aiocsv>=1.2.4",	
	"isort>=5.12.0",	
	"pyarrow>=11.0.0",
	"pydantic>=1.10.7",
	"pymongo>=4.3.3",	
	]

[project.optional-dependencies]
dev = [	
	"build>=0.10.0",
	"mypy==1.2.0",
	"pip-chill==1.0.3",
	"pytest",
	"pytest-asyncio",
	"pytest-datafiles",
	"types-aiofiles>=23.1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/Jylpah/pyutils"
"Bug Tracker" = "https://github.com/Jylpah/pyutils/issues"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyutils"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
	]
exclude = [ 'tmp']

[tool.pyright]
reportGeneralTypeIssues = false