[project]
name = "pyutils"
version = "1.2.0"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Misc Python utils and classes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1",
    "aiohttp>=3.9.1",
    "aiodns>=3.0",
    "aioconsole>=0.6",
    "alive-progress>=3.1",
    "Brotli>=1.1",
    "Deprecated>=1.2",
    "click>=8.1",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "build>=0.10",
    "mypy>=1.7",
    "pip-chill>=1.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-datafiles>=3.0",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "ruff>=0.1.9",
    "types-aiofiles>=23.1.0.1",
    "types-Deprecated>=1.2.9.3",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/pyutils"
"Bug Tracker" = "https://github.com/Jylpah/pyutils/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/pyutils"]


[tool.mypy]
exclude = ['tmp']
mypy_path = ['src']

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = [".venv", ".vscode" ] 
fixable = ["ALL"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-v --cov=src"
pythonpath = "src" # avoid import path append in test files
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
]


[tool.pyright]
reportGeneralTypeIssues = false
